RAVE-869 This is a partial fix that just puts the footer behind the canvas with z-index.
git-svn-id: https://svn.apache.org/repos/asf/rave/trunk@1447567 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/webapp/static/css/rave-skin.less
+++ b/rave-portal-resources/src/main/webapp/static/css/rave-skin.less
@@ -93,7 +93,8 @@ input{
 footer{
 	background: @white;
 	position: relative;
-	z-index: 1000;
+    // Makes sure footer is behind the canvas
+	z-index: 998;
 }
 
 /* Buttons
